tests/multiubuntu/test-cases/TC_34/TC_34_egress_ingress_toFQDNs_multiPorts.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-hgprakwczwpwqwa
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-4
      group: group-2
  egress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8080"
        protocol: TCP
    toFQDNs:
    - matchName: 239.8.232.35.bc.googleusercontent.com
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      - port: "9153"
        protocol: TCP
      rules:
        dns:
        - matchPattern: '*'
---
